# stock-backend

./: .gitignore  LICENSE  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/oauth/: admin.py  apps.py  auth.py  discord_oauth.py  models.py  urls.py  views.py
backend/oauth/migrations/: 0001_initial.py
backend/user/: admin.py  auth.py  backend.py  managers.py  models.py  schemas.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_discorduser_email.py
