[tool.poetry]
name = "backend-v2"
version = "0.1.0"
description = ""
authors = ["potato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.15.0"
djangorestframework-simplejwt = "^5.3.1"
jwt = "^1.3.1"
requests = "^2.31.0"
django-cors-headers = "^4.3.1"
pydantic = "^2.6.4"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
